--- a/app/src/main/res/layout/activity_use.xml
+++ b/app/src/main/res/layout/activity_use.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".UseActivity"
     >
+
 <FrameLayout
     android:id="@+id/fragmentFrame"
     android:layout_width="match_parent"
@@ -13,16 +15,25 @@
     android:layout_above="@id/bottomNavBar"
     android:layout_alignParentTop="true"
     android:layout_centerHorizontal="true"
+    android:paddingLeft="15dp"
+    android:paddingRight="15dp"
+    android:paddingTop="7dp"
     />
-<com.google.android.material.bottomnavigation.BottomNavigationView
-    android:id="@+id/bottomNavBar"
-    app:menu="@menu/bottom_nav_menu"
-    app:labelVisibilityMode="unlabeled"
-    app:itemIconSize="40dp"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_alignParentBottom="true"
-    android:layout_centerHorizontal="true"
-    android:background="#fff"
-    />
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavBar"
+        app:menu="@menu/bottom_nav_menu"
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:background="@color/bottom_nav_background"
+        app:itemBackground="@null"
+        app:itemIconSize="20dp"
+        app:itemTextColor="@color/bottom_nav_icon"
+        app:labelVisibilityMode="labeled"
+        app:itemRippleColor="@null"
+        app:itemIconTint="@color/bottom_nav_icon"
+        app:itemActiveIndicatorStyle="@null"
+        />
 </RelativeLayout>
