--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -2,14 +2,22 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+
+    >
 
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="프로필"
-        android:textSize="100sp"
+        android:text="@string/profile"
+        android:textSize="@dimen/top_menu_name_size"
+        />
+    <TextView
+        android:id="@+id/user_display_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text=""
         />
 
 </LinearLayout>
