--- a/app/src/main/res/layout/fragment_record.xml
+++ b/app/src/main/res/layout/fragment_record.xml
@@ -8,8 +8,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="기록"
-        android:textSize="100sp"
+        android:text="@string/record"
+        android:textSize="@dimen/top_menu_name_size"
         />
 
 </LinearLayout>
