--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
+    <color name="black">#ff000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="my_light_primary">#ff5733</color>
+    <color name="bottom_nav_background">#f2f2f2</color>
+    <color name="bottom_nav_icon">#a2a2a2</color>
+    <color name="bottom_nav_icon_act">#525252</color>
+    <color name="more_button">#eaeaea</color>
 </resources>
