--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -14,6 +14,10 @@
             android:layout_height="wrap_content"
             android:text="@string/more"
             android:textSize="@dimen/top_menu_name_size"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:layout_marginBottom="@dimen/top_menu_bottom_margin"
+
             />
     </LinearLayout>
 
@@ -21,8 +25,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-
         <android.widget.Button
+            android:id="@+id/moreNoticeButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/notice"
+            android:textAlignment="textStart"
+            android:background="@drawable/more_button_design"
+            android:layout_margin="10dp"
+            android:padding="10dp"
+            android:textSize="20sp"
+            />
+        <!--<android.widget.Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/tutorial"
@@ -31,7 +45,7 @@
             android:layout_margin="10dp"
             android:padding="10dp"
             android:textSize="20sp"
-            />
+            />-->
         <android.widget.Button
             android:id="@+id/moreTimerButton"
             android:layout_width="match_parent"
@@ -43,17 +57,7 @@
             android:padding="10dp"
             android:textSize="20sp"
             />
-        <android.widget.Button
-            android:id="@+id/moreAnnouncementButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/announcement"
-            android:textAlignment="textStart"
-            android:background="@drawable/more_button_design"
-            android:layout_margin="10dp"
-            android:padding="10dp"
-            android:textSize="20sp"
-            />
+
         <android.widget.Button
             android:id="@+id/moreLogoutButton"
             android:layout_width="match_parent"
