--- a/app/src/main/res/layout/fragment_record.xml
+++ b/app/src/main/res/layout/fragment_record.xml
@@ -2,7 +2,8 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
 
     <TextView
@@ -10,6 +11,102 @@
         android:layout_height="wrap_content"
         android:text="@string/record"
         android:textSize="@dimen/top_menu_name_size"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        android:layout_marginBottom="@dimen/top_menu_bottom_margin"
+
         />
+    <LinearLayout
+        android:id="@+id/recordDetail"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        >
+        <TextView
+            android:id="@+id/dd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="이름"
+            android:textSize="@dimen/top_menu_name_size"
+            />
+        <EditText
+            android:id="@+id/nameValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:inputType="text"
+            android:text="Name" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="칼로리"
+            android:textSize="@dimen/top_menu_name_size"
+            />
+        <EditText
+            android:id="@+id/kcalValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:inputType="text"
+            android:text="칼" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="탄수화물"
+            android:textSize="@dimen/top_menu_name_size"
+            />
+        <EditText
+            android:id="@+id/carbohydratesValue"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:inputType="text"
+            android:text="탄수" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="단백질"
+            android:textSize="@dimen/top_menu_name_size"
+            />
+        <EditText
+            android:id="@+id/proteinValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:inputType="text"
+            android:text="단백질" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="지방"
+            android:textSize="@dimen/top_menu_name_size"
+            />
+        <EditText
+            android:id="@+id/fatValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:inputType="text"
+            android:text="지방" />
+        <Button
+            android:id="@+id/recordB"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="저장하기" />
+        <Button
+            android:id="@+id/recordBb"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="건강은 챙겼지만 기록은 하지 않겠습니다!" />
+    </LinearLayout>
+
+
+
 
 </LinearLayout>
