--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,5 +3,9 @@
  <dimen name="activity_horizontal_margin">16dp</dimen>
  <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="bottom_nav_item_height">40dp</dimen>
-    <dimen name="top_menu_name_size">31sp</dimen>
+    <dimen name="top_menu_name_size">25sp</dimen>
+    <dimen name="top_menu_bottom_margin">10dp</dimen>
+    <dimen name="sub_menu_name_size">15sp</dimen>
+    <dimen name="notice_text_size">20sp</dimen>
+    <dimen name="sub_title_size">30sp</dimen>
 </resources>
