--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,9 +2,11 @@
 <resources>
     <color name="black">#ff000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="background">#FFFFFF</color>
     <color name="my_light_primary">#ff5733</color>
     <color name="bottom_nav_background">#f2f2f2</color>
     <color name="bottom_nav_icon">#a2a2a2</color>
     <color name="bottom_nav_icon_act">#525252</color>
     <color name="more_button">#eaeaea</color>
+    <color name="notice_button_underline">#c2c2c2</color>
 </resources>
