--- a/app/src/main/res/drawable/profile_button_design.xml
+++ b/app/src/main/res/drawable/profile_button_design.xml
@@ -3,7 +3,7 @@
 
     <item >
         <shape android:shape="rectangle">
-            <solid android:color="@color/background" />
+            <solid android:color="#e2e2e2" />
         </shape>
     </item>
 </layer-list>
