--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -6,7 +6,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/background"
-
     >
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,19 +32,31 @@
             android:orientation="vertical"
             android:padding="10dp"
             >
-            <android.widget.Button
-                android:id="@+id/profile_profile_button"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:minWidth="1000dp"
-                android:maxWidth="1000dp"
-                android:layout_marginBottom="@dimen/top_menu_bottom_margin"
-                android:drawableStart="@drawable/profile_profile_button_design"
-                android:text="@string/nullUserName"
-                android:textSize="20sp"
-                android:background="@drawable/profile_button_design"
-                android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24"
-                />
+                >
+                <TextView
+                    android:id="@+id/userName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/nullUserName"
+                    android:textSize="20sp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+
+                    />
+                <android.widget.Button
+                    android:id="@+id/profile_profile_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="정보 수정"
+                    android:textAlignment="textEnd"
+                    android:background="@drawable/profile_button_design"
+                    android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24"
+                    />
+            </LinearLayout>
+
 
             <GridLayout
                 android:id="@+id/daysGrid"
@@ -117,26 +128,24 @@
                 android:layout_weight="100"
                 android:layout_margin="@dimen/top_menu_bottom_margin"
                 android:background="?android:attr/listDivider" />
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                >
-                <TextView
-                    android:id="@+id/goalWeight"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="@string/goalWeight"
-                    android:textSize="@dimen/notice_text_size"
-                    />
-                <android.widget.Button
-                    android:id="@+id/weightCorrectionButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/correction"
-                    android:layout_weight="0"
-                    />
-            </LinearLayout>
+
+            <TextView
+                android:id="@+id/weight"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_gravity="center"
+                android:text="몸무게"
+                android:textSize="14sp"
+                />
+            <TextView
+                android:id="@+id/goalWeight"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/goalWeight"
+                android:textSize="@dimen/notice_text_size"
+                />
+
             <TextView
                 android:id="@+id/currentWeight"
                 android:layout_width="wrap_content"
@@ -152,21 +161,121 @@
                 android:layout_margin="@dimen/top_menu_bottom_margin"
                 android:background="?android:attr/listDivider" />
             <TextView
+                android:id="@+id/q"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+
+                android:text="권장 칼로리와 영양소"
+                android:layout_marginBottom="10dp"
+                />
+
+            <ProgressBar
+                android:id="@+id/progressBarCalorie"
+                style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="나의 권장 칼로리"
+                android:scaleY="@integer/five"
+                android:layout_marginBottom="1dp"
+
+                android:max="100"
+                android:progress="20"
+                android:visibility="visible"
+                />
+            <TextView
+                android:id="@+id/cal_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+
+                android:text="@string/progressText"
+                android:textSize="10sp"
+                android:layout_marginBottom="10dp"
+                />
+            <ProgressBar
+                android:id="@+id/progressBarCarbohydrate"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scaleY="@integer/five"
+                android:layout_marginBottom="1dp"
+
+                android:max="100"
+                android:progress="30"
+                android:visibility="visible"
+                />
+            <TextView
+                android:id="@+id/carbo_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+
+                android:text="@string/progressText"
+                android:textSize="10sp"
+                android:layout_marginBottom="10dp"
+                />
+            <ProgressBar
+                android:id="@+id/progressBarProtein"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scaleY="@integer/five"
+                android:layout_marginBottom="1dp"
+                android:max="100"
+                android:progress="70"
+                android:visibility="visible"
+                />
+            <TextView
+                android:id="@+id/prot_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+
+                android:text="@string/progressText"
+                android:textSize="10sp"
+                android:layout_marginBottom="10dp"
+                />
+            <ProgressBar
+                android:id="@+id/progressBarFat"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scaleY="@integer/five"
+                android:layout_marginBottom="1dp"
+
+                android:max="100"
+                android:progress="120"
+                android:visibility="visible"
+                />
+            <TextView
+                android:id="@+id/fat_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+
+                android:text="@string/progressText"
+                android:textSize="10sp"
+                android:layout_marginBottom="10dp"
+                />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="100"
+                android:layout_margin="@dimen/top_menu_bottom_margin"
+                android:background="?android:attr/listDivider" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="오늘의 운동 체크"
+                />
+            <android.widget.Button
+                android:id="@+id/workoutCheckButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="운동 완료!"
                 />
         </LinearLayout>
     </ScrollView>
-
-    <ProgressBar
-        android:id="@+id/progressBar"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:max="100"
-        android:progress="20"
-        />
-
-
 </LinearLayout>
