--- a/app/src/main/res/layout/fragment_record_main.xml
+++ b/app/src/main/res/layout/fragment_record_main.xml
@@ -16,8 +16,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-
-        /> <!-- android:src="@drawable/" 적절한 아이콘 설정 필요 -->
+        android:src="@drawable/add"
+        />
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
