--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,19 +7,38 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <ImageView
+        android:id="@+id/logo"
+        android:layout_width="361dp"
+        android:layout_height="442dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        app:srcCompat="@mipmap/ic_launcher_foreground"
+        />
 
+    <android.widget.Button
+        android:id="@+id/LoginButtonDesign"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="구글로 로그인 하기"
+        android:textSize="15sp"
+        android:background="@drawable/profile_button_design"
+        android:drawableEnd="@drawable/baseline_keyboard_arrow_right_24"
+        android:paddingLeft="15dp"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/logo"
+        />
     <com.google.android.gms.common.SignInButton
         android:id="@+id/LoginButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="googleLoginButton"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.45"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.665" />
+        android:layout_centerHorizontal="true"
+        android:layout_below="@+id/logo"
+        android:visibility="gone"
+        />
 
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</RelativeLayout>
