--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="sub_menu_name_size">15sp</dimen>
     <dimen name="notice_text_size">20sp</dimen>
     <dimen name="sub_title_size">30sp</dimen>
+    <dimen name="addSec">18sp</dimen>
 </resources>
