--- a/app/src/main/res/drawable/profile_button_design.xml
+++ b/app/src/main/res/drawable/profile_button_design.xml
@@ -4,6 +4,11 @@
     <item >
         <shape android:shape="rectangle">
             <solid android:color="#e2e2e2" />
+            <corners
+                android:bottomLeftRadius="12dp"
+                android:bottomRightRadius="12dp"
+                android:topLeftRadius="12dp"
+                android:topRightRadius="12dp"/>
         </shape>
     </item>
 </layer-list>
