--- a/app/src/main/res/drawable/more_button_design.xml
+++ b/app/src/main/res/drawable/more_button_design.xml
@@ -1,10 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid
-        android:color="@color/more_button"/>
-    <corners
-        android:radius="10dp"/>
-
-
-
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item >
+        <shape android:shape="rectangle">
+            <solid android:color="@color/white" />
+            <stroke
+                android:width="0dp"
+                android:color="#e3e5e5"/>
+            <corners
+                android:bottomLeftRadius="48dp"
+                android:bottomRightRadius="48dp"
+                android:topLeftRadius="48dp"
+                android:topRightRadius="48dp"
+                />
+        </shape>
+    </item>
+    <!--<item android:left="300dp">
+        <vector android:autoMirrored="true"
+            android:height="24dp" android:tint="#000000"
+            android:viewportHeight="24" android:viewportWidth="24"
+            android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+            <clip-path
+                android:pathData="M6.089,17.376C6.49,17.777 7.137,17.777 7.538,17.376L14.337,10.577C14.656,10.258 14.656,9.742 14.337,9.423L7.538,2.624C7.137,2.223 6.49,2.223 6.089,2.624C5.688,3.025 5.688,3.671 6.089,4.072L12.013,10.004L6.081,15.936C5.688,16.329 5.688,16.983 6.089,17.376Z"/>
+            <path
+                android:pathData="M20,19.818l-19.636,-0l-0,-19.636l19.636,-0z"
+                android:fillColor="#000000"/>
+        </vector>
+    </item>-->
+</layer-list>
