--- a/app/src/main/res/drawable/profile_background.xml
+++ b/app/src/main/res/drawable/profile_background.xml
@@ -1,17 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item >
+
+    <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/white" />
             <stroke
                 android:width="1dp"
                 android:color="#e3e5e5"/>
             <corners
-                android:bottomLeftRadius="48dp"
-                android:bottomRightRadius="48dp"
-                android:topLeftRadius="48dp"
-                android:topRightRadius="48dp"
+                android:topLeftRadius="50dp"
+                android:topRightRadius="50dp"
                 />
         </shape>
     </item>
+    <item android:top="50dp">
+        <shape android:shape="rectangle">
+            <stroke android:width="1dp" android:color="@color/background" />
+            <solid android:color="@color/background" />
+        </shape>
+    </item>
+
 </layer-list>
