--- a/app/src/main/res/layout/fragment_record_main.xml
+++ b/app/src/main/res/layout/fragment_record_main.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="10dp"
+    android:paddingLeft="15dp"
+    android:paddingRight="15dp"
+    android:paddingTop="7dp"
+    >
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recordRecyclerView"
@@ -17,6 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:src="@drawable/add"
+        android:layout_margin="5dp"
         />
     <FrameLayout
         android:id="@+id/container"
