--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,9 @@
     <dimen name="notice_text_size">20sp</dimen>
     <dimen name="sub_title_size">30sp</dimen>
     <dimen name="addSec">18sp</dimen>
+    <dimen name="divider_margin">18dp</dimen>
+    <dimen name="ten_dp">10dp</dimen>
+    <dimen name="fifteen_dp">30dp</dimen>
+    <dimen name="more_button_padding">20dp</dimen>
+
 </resources>
